Fixed orbit control bug (overlapping elements issue)

--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
 
+/* Scrollbar width */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Scrollbar track */
+  ::-webkit-scrollbar-track {
+	background: #707070; 
+	border-radius: 10px;
+  }
+   
+  /* Scrollbar handle */
+  ::-webkit-scrollbar-thumb {
+	background: #f1f1f1; 
+	border-radius: 10px;
+  }
+  
+  /* Scrollbar hover */
+  ::-webkit-scrollbar-thumb:hover {
+	background: #9e9e9e; 
+  }
+
 .planet-name {
 	padding-top: 20px;
 	width: 100%;
@@ -37,7 +59,6 @@ p {
 
 .information-box {
 	position: relative;
-	width: 50%;
 	margin: 20px;
 	background-color: rgb(45, 45, 45);
 	display:block;
@@ -59,17 +80,16 @@ p {
 	line-height: 150%;
 }
 
-canvas {
-	z-index: -1; 
-  }
-
 #planet-details {
 	display: flex;
   	justify-content: flex-end;
 	position: absolute;
-	z-index: 1;
-	width: 100%;
+	
+	width: 50%;
 	height: 100%;
+
+	right: 0; 
+    top: 0;  
 }
 
 #bckgrnd {
@@ -77,7 +97,7 @@ canvas {
   	justify-content: flex-end;
 	background-color: rgb(0, 0, 0);
 	position: absolute;
-	z-index: -2;
+	z-index: -1;
 	width: 100%;
 	height: 100%;
 }
